# doc_analysis

./: app.py  chatpdf.py  pyproject.toml
data/: Договор.docx  счет.docx
