[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["Alexander <aez2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
torch = "<2.2.3"
python = ">=3.11,<3.12"
langchain = "^0.1.15"
langchain-openai = "^0.1.2"
langchain-community = "^0.0.32"
sentence-transformers = "^2.6.1"
pypdf = "^4.2.0"
termcolor = "^2.4.0"
streamlit = "^1.33.0"
streamlit-chat = "^0.1.1"
watchdog = "^4.0.0"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
pillow-heif = "^0.16.0"
ipython = "^8.23.0"
pdfplumber = "^0.11.0"
pymupdf = "^1.24.2"
python-docx = "^1.1.2"
langchain-experimental = "^0.0.57"
unstructured = {extras = ["local-inference"], version = "^0.15.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
